# web_chat_llm

./: .gitignore  config.yaml  main.py  pyproject.toml  pyrightconfig.json  replacements.txt  sync_to_dev.sh  test_calculator_skill.py
app/http/: chat.py  response.py  router.py
app/http/handlers/: __init__.py  change_role.py  chat_router.py  common.py  emotion_sse.py  llm_models.py  memory.py  memory_router.py  session_mgr.py  topic.py  user.py  voice_mgr.py
core/: config.py  logger.py
core/helper/: bprint.py
core/memory/: nl_memory.py
core/memory/async_memory/: __init__.py  conflict_resolver.py  memory.py  models.py  storage.py
core/memory/data_processor/: __init__.py  models.py  processor.py
core/model/: base.py  chat_analyze.py  chat_analyze_repo.py  chat_history.py  chat_history_repo.py  emotion_speculate.py  emotion_speculate_repo.py  topic.py  topic_repo.py  user.py  user_repo.py
core/nl_chat/: chat.py  prompt_mgr.py  skill_loader.py
core/nl_chat/middlewares/: __init__.py  (+8 more)
core/voice_server/: chat_analyze.py  scene_loader.py  token.py  update_chat_config.py  voice_api.py
docs/: SKILL_FINAL.md  SKILL_SYSTEM.md  SKILL_TOOLS.md  情绪模型训练备案文档.md  记忆管理系统备案文档.md
scripts/: clean_memory.py  diagnose_memory.py  quick_test.py  reset_milvus.py  restore_old_db.py  restore_old_db.sql  test_similarity.py
skills/bazi/: SKILL.md
skills/calculator/: README.md  SKILL.md  __init__.py  calculator_script.py  skill.yaml
skills/file-manager/: README.md  SKILL.md  __init__.py
skills/web-scraper/: .env.example  README.md  SKILL.md  __init__.py  client.py  scraper_script.py
skills/web-search/: SKILL.md  search_script.py
skills/web_scraper/: config.py  exceptions.py  skill.yaml  utils.py
tests/: conftest.py  cuda_test.py  test_memory.py  test_simple.py
(+9 files in other folders)
